--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -7,14 +7,16 @@ services:
     ports:
       - "${DATABASE_PORT}:5432"
     environment:
-      TZ: ${DATABASE_TZ}
-      POSTGRES_DB: ${DATABASE_NAME_DB}
-      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      TZ: ${DATABASE_TZ}
     networks:
       - finance-ctrl-network-api
     restart: on-failure
     tty: true
+    env_file:
+       - .env
 
   finance-ctrl-api:
     container_name: finance-ctrl-api
@@ -27,8 +29,10 @@ services:
     working_dir: /var/www/finance-ctrl-api
     environment:
       - DATABASE_URL=${DATABASE_URL}
-      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
+      - JWT_SECRET=${JWT_SECRET}
     volumes:
       - ../:/var/www/finance-ctrl-api
     networks:
@@ -38,6 +42,8 @@ services:
     links:
       - database-postgres
     tty: true
+    env_file:
+      - .env
 networks:
   finance-ctrl-network-api:
     name: finance-ctrl-network
