feat: created prod and database using Supabase

--- a/.docker/.env.example
+++ b/.docker/.env.example
@@ -1,5 +1,27 @@
+# Properties for database
 DATABASE_PORT=5432
-DATABASE_NAME_DB=finance-ctrl
-DATABASE_USER=pguser
+DATABASE_NAME=finance-ctrl
+DATABASE_USERNAME=pguser
 DATABASE_PASSWORD =pgpassword
-DATABASE_URL=jdbc:postgresql://database-postgres:5432/finance-ctrl
+DATABASE_TZ=America/Sao_Paulo
+
+# Properties for spring boot aplication: local
+SPRING_DATABASE_URL=jdbc:postgresql://database-postgres:5432/finance-ctrl
+SPRING_DATABASE_USERNAME=pguser
+SPRING_DATABASE_PASSWORD =pgpassword
+SPRING_PROFILES_ACTIVE=local
+SPRING_JWT_SECRET=my-secret
+
+# Properties for spring boot aplication: qa
+#SPRING_DATABASE_URL=jdbc:postgresql://db.ctwqkaawsipixqkjyiis.supabase.co:5432/postgres
+#SPRING_DATABASE_USERNAME=postgres
+#SPRING_DATABASE_PASSWORD=MbLucHkD1BZfUiSt
+#SPRING_PROFILES_ACTIVE=qa
+#SPRING_JWT_SECRET=my-secret
+
+# Properties for spring boot aplication: prod
+#SPRING_DATABASE_URL=jdbc:postgresql://db.rykdwxqdwqnicgdwqoaa.supabase.co:5432/postgres
+#SPRING_DATABASE_USERNAME=postgres
+#SPRING_DATABASE_PASSWORD =RpmMrF1mSMHe0KuI
+#SPRING_PROFILES_ACTIVE=prod
+#SPRING_JWT_SECRET=my-secret
