--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -28,11 +28,11 @@ services:
       - "8080:8080"
     working_dir: /var/www/finance-ctrl-api
     environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - DATABASE_USERNAME=${DATABASE_USERNAME}
-      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_URL=${SPRING_DATABASE_URL}
+      - DATABASE_USERNAME=${SPRING_DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${SPRING_DATABASE_PASSWORD}
       - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
-      - JWT_SECRET=${JWT_SECRET}
+      - JWT_SECRET=${SPRING_JWT_SECRET}
     volumes:
       - ../:/var/www/finance-ctrl-api
     networks:
@@ -47,3 +47,7 @@ services:
 networks:
   finance-ctrl-network-api:
     name: finance-ctrl-network
+    enable_ipv6: true
+    ipam:
+      config:
+        - subnet: 2001:db8::/64
